[gd_scene load_steps=3 format=3 uid="uid://bfmh0hnb3mpaj"]

[ext_resource type="Script" path="res://scenes/TerrainEditor/scripts/Draggable.gd" id="1_j2cvw"]
[ext_resource type="Theme" uid="uid://cqf51maiy40xl" path="res://themes/default.tres" id="2_prfbk"]

[node name="Draggable" type="Area2D"]
script = ExtResource("1_j2cvw")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
top_level = true
offset_right = 79.0
offset_bottom = 51.0
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_prfbk")
alignment = 1

[node name="DeleteButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_button_down"]
